# agent-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Makefile  PROMPT.md  README.md  docker-compose-mcp.yml  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  exceptions.py  limiter.py  logging_config.py  main.py
app/agents/: chatbot_agent.py  rag_agent.py  tool_agent.py
app/db/: mongo.py  qdrant.py
app/graphs/: chatbot_graph.py  rag_graph.py  tool_graph.py
app/graphs/nodes/: llm_node.py  retriever_node.py
app/middleware/: auth.py  request_id.py
app/models/: auth.py  chat.py  file.py  mcp.py  message.py  session.py  user.py
app/prompts/: rag.py
app/repositories/: base.py  chunk_repo.py  file_repo.py  mcp_repo.py  message_repo.py  qdrant_repo.py  session_repo.py  user_repo.py
app/routers/: auth.py  chat.py  files.py  health.py  mcp.py  sessions.py  users.py
app/services/: auth_service.py  chat_service.py  file_service.py  mcp_service.py  session_service.py  tool_service.py  vector_service.py
app/storage/: minio.py
app/tools/: __init__.py  mcp_tool.py  web_search_tool.py
app/utils/: embeddings.py  llm.py  security.py
mcp-servers/math/: Dockerfile  server.py
mcp-servers/text/: server.py
tests/: conftest.py
tests/fixtures/: sample.csv  sample.json  sample.md  sample.txt
tests/integration/: test_auth_users_api.py  test_chat_api.py  test_files_api.py  test_health.py  test_mcp_api.py  test_sessions_api.py
tests/unit/: test_config.py
tests/unit/agents/: test_chatbot_agent.py
tests/unit/db/: test_mongo.py
tests/unit/graphs/: test_chatbot_graph.py  test_rag_graph.py
tests/unit/middleware/: test_auth.py
tests/unit/repositories/: test_chunk_repo.py  test_mcp_repo.py  test_message_repo.py  test_session_repo.py  test_user_repo.py
tests/unit/services/: test_auth_service.py  test_chat_service.py  test_file_service.py  test_mcp_service.py  test_session_service.py  test_tool_service.py  test_vector_service.py
tests/unit/tools/: __init__.py  test_mcp_tool.py  test_web_search_tool.py
tests/unit/utils/: test_security.py
